--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Thêm hình ảnh tuhoc.cc.jpg và khi click chuột sẽ điều hướng đến contact.html  -->
     <a href="/more-info/contact.html"
-      ><img src="/assets/images/tuhoc.cc.jpg" alt="Hình ảnh về tôi"
+      ><img src="tuhoc.cc.jpg" alt="Hình ảnh về tôi"
     /></a>
     <h2>About me</h2>
     <p>
@@ -43,4 +43,5 @@
     <hr />
   </body>
 </html>
+
 
