--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- 1. Điều hướng về trang chủ -->
     <a href="../index.html">Trang chủ</a>
     <!-- 2. Điều hướng đến contact.html -->
-    <a href="/more-info/contact.html">Liên hệ</a>
+    <a href="../contact.html">Liên hệ</a>
     <!-- 3. Điều hướng đến my-skill.html -->
-    <a href="/more-info/my-skill.html">Kỹ năng của tôi</a>
+    <a href="../my-skill.html">Kỹ năng của tôi</a>
 
     <h1>Welcome to My Website!</h1>
     <hr />
@@ -43,5 +43,6 @@
     <hr />
   </body>
 </html>
+
 
 
