--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
   <body>
     <!-- Thêm các link điều hướng -->
     <!-- 1. Điều hướng về trang chủ -->
-    <a href="../index.html">Trang chủ</a>
+     <a href="/index.html">Trang chủ</a>
     <!-- 2. Điều hướng đến contact.html -->
-    <a href="../contact.html">Liên hệ</a>
+    <a href="/contact.html">Liên hệ</a>
     <!-- 3. Điều hướng đến my-skill.html -->
-    <a href="../my-skill.html">Kỹ năng của tôi</a>
+    <a href="/my-skill.html">Kỹ năng của tôi</a>
 
     <h1>Contact Me</h1>
     <p>
@@ -29,4 +29,5 @@
     <hr />
   </body>
 </html>
+
 
